--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -21,6 +21,7 @@
         <td><%= event.is_public %></td>
         <td><%= event.capacity %></td>
         <td><%= link_to 'Show', event %></td>
+        <td><%= link_to 'Attendee List', event_attendees_path(event) %></td>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
