--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Category:</strong>
+  <%= @event.category_name %>
+</p>
+
+<p>
   <strong>Is public:</strong>
   <%= @event.is_public %>
 </p>
