--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -16,6 +16,13 @@
 </p>
 
 <p>
+  <strong>Group:</strong>
+  <% @event.groups.each do |group|	%>
+  	<%= group.name %>
+  <% end %>
+</p>
+
+<p>
   <strong>Is public:</strong>
   <%= @event.is_public %>
 </p>
