--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Events</h1>
+<%= form_tag events_path, method: :get do %>
+  <%= text_field_tag :keyword %>
+  <%= submit_tag "Search" %>
+<% end %>
 
 <table>
   <thead>
@@ -24,6 +28,9 @@
         <td><%= link_to 'Attendee List', event_attendees_path(event) %></td>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Dashboard', dashboard_event_path(event) %></td>
+        <td><%= button_to 'Public', public_event_path(event) %></td>
+        <td><%= button_to 'Unpublic', unpublic_event_path(event) %></td>
       </tr>
     <% end %>
   </tbody>
