--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,37 +6,41 @@
   <%= submit_tag "Search" %>
 <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Descrption</th>
-      <th>Is public</th>
-      <th>Capacity</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= form_tag bulk_update_events_path do %>
 
-  <tbody>
-    <% @events.each do |event| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= event.name %></td>
-        <td><%= event.descrption %></td>
-        <td><%= event.is_public %></td>
-        <td><%= event.capacity %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Attendee List', event_attendees_path(event) %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= link_to 'Dashboard', dashboard_event_path(event) %></td>
-        <td><%= button_to 'Public', public_event_path(event) %></td>
-        <td><%= button_to 'Unpublic', unpublic_event_path(event) %></td>
+        <th>Name</th>
+        <th>Descrption</th>
+        <th>Is public</th>
+        <th>Capacity</th>
+        <th colspan="5"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @events.each do |event| %>
+        <tr>
+          <td><%= check_box_tag "ids[]", event.id, false %><%= event.name %></td>
+          <td><%= event.descrption %></td>
+          <td><%= event.is_public %></td>
+          <td><%= event.capacity %></td>
+          <td><%= link_to 'Show', event %></td>
+          <td><%= link_to 'Attendee List', event_attendees_path(event) %></td>
+          <td><%= link_to 'Edit', edit_event_path(event) %></td>
+          <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Dashboard', dashboard_event_path(event) %></td>
+          <td><%= link_to toggle_public_button(event), toggle_public_event_path(event), method: :post %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= button_to 'Destroy all events', bulk_delete_events_path, data: { confirm: "This will destroy all events, are you sure?"} %>
+  <%= submit_tag 'DELETE' %>
+  <%= submit_tag 'PUBLIC' %>
+  <%= submit_tag 'UNPUBLIC' %>
+
+<% end %>
+
 <%= link_to 'New Event', new_event_path %>
