Moving event form to index

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -35,6 +35,7 @@
         <td><%= event.is_public %></td>
         <td><%= event.capacity %></td>
         <td><%= link_to 'Show', event %></td>
+        <td><%= link_to 'Edit', events_path(id: event) %></td>
         <td><%= link_to 'Attendee List', event_attendees_path(event) %></td>
         <td><%= link_to 'Dashboard', dashboard_event_path(event) %></td>
       </tr>
@@ -42,5 +43,45 @@
   </tbody>
 </table>
 
+<%= form_for @event do |f| %>
+  <% if @event.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@event.errors.count, "error") %> prohibited this @event from being saved:</h2>
 
-<%= link_to 'New Event', new_event_path %>
+      <ul>
+      <% @event.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :descrption %>
+    <%= f.text_area :descrption %>
+  </div>
+
+  <%= f.collection_select(:category_id, Category.all, :id, :name, prompt: true) %>
+
+  <p>Please select groups: </p>
+  <%= f.collection_check_boxes(:group_ids, Group.all, :id, :name) %>
+
+  <div class="field">
+    <%= f.label :is_public %>
+    <%= f.check_box :is_public %>
+  </div>
+
+  <div class="field">
+    <%= f.label :capacity %>
+    <%= f.number_field :capacity %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
